--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "shopping-cart",
+  "homepage":"https://github.com/Dineshkumaroggu/shopping-cart",  
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -14,11 +15,13 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
+       "predeploy": "npm run build",
+        "deploy": "gh-pages -d build",
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject"
+    },
   "eslintConfig": {
     "extends": [
       "react-app",
